2023/11/23 Add something into 'note/1. Dataset.md'

--- a/note/1. Dataset.md
+++ b/note/1. Dataset.md
@@ -91,3 +91,16 @@ for bee in bees:
     print(bee)
 ```
 
+輸出：
+
+```shell
+Sample(name: 957233405_25c1d1187b, image: <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x375 at 0x100A29820>, label: ants)
+Sample(name: 2288481644_83ff7e4572, image: <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x500 at 0x12D98DBE0>, label: ants)
+Sample(name: 67270775_e9fdf77e9d, image: <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x500 at 0x12D99B5E0>, label: ants)
+.......
+Sample(name: 1917341202_d00a7f9af5, image: <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x423 at 0x12DA39220>, label: ants)
+Sample(name: 2638074627_6b3ae746a0, image: <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x333 at 0x12DA392B0>, label: bees)
+Sample(name: 507288830_f46e8d4cb2, image: <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x387 at 0x12DA39310>, label: bees)
+......
+Sample(name: 2765347790_da6cf6cb40, image: <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=500x375 at 0x12DA84FA0>, label: bees)
+```
