2023/11/23 Add something into 'note/1. Dataset.md' and add files 2. TensorBoard, 3. Tensor, 4. Transforms

--- a/note/2. TensorBoard.md
+++ b/note/2. TensorBoard.md
@@ -37,7 +37,7 @@ writer.close()  # 記錄完成後，必須關閉"writer"物件
 ```python
 from torch.utils.tensorboard import SummaryWriter  # 引入TensorBoard
 writer = SummaryWriter("logs")  # 創建SummaryWriter物件
-writer.add_scalar(tags, scalar_value, global_step)  # 記錄數據
+writer.add_scalar(tag, scalar_value, global_step)  # 記錄數據
 writer.close()  # 關閉SummaryWriter物件
 ```
 
@@ -84,3 +84,59 @@ TensorBoard 2.14.0 at http://localhost:6006/ (Press CTRL+C to quit)
 
 運行完成後，我們只要在終端機/Powershell輸入`Crtl+C`就可以關閉TensorBoard了。
 
+## `add_image()`方法
+
+`add_image()`是TensorBoard提供的一個紀錄圖片的方法，根據官方文檔中的描述，其呼叫方法如下：
+
+```python
+from torch.utils.tensorboard import SummaryWriter  # 引入Tensorboard
+writer = SummaryWriter("logs")  # 創建SummaryWriter物件
+writer.add_image(tag, img_tensor, global_step, dataformats)  # 紀錄圖片
+writer.close()  # 關閉SummaryWriter物件
+```
+
+其中每個參數的作用分別如下：
+
+`tag`：參數型態為`str`，作用是標記檔案的名稱。
+
+`img_tensor`：參數型態可為`torch.Tensor`、`numpy.ndarray`、`str`，即圖片本身。
+
+`global_step`：參數類型為`int`，用來記錄當前處於模型運行中的第幾步（通常也作為二維圖形中的x軸數值）。
+
+`dataformats`：檔案的格式。
+
+以下是一個使用`add_image()`紀錄模型訓練過程的示範：
+
+```python
+import os
+import numpy as np
+from PIL import Image
+from torch.utils.tensorboard import SummaryWriter
+
+writer = SummaryWriter("logs")
+
+ANTS_IMAGE_PATH = "data/train/ants_image"
+image_folder = sorted(os.listdir(ANTS_IMAGE_PATH))  # 將圖片的檔名存成一個list並進行排序
+step = 0  # 用來記錄當前模型訓練到第幾步
+
+# 紀錄前10張圖片
+for image_file in image_folder:
+    ant_np_image = np.array(Image.open(os.path.join(ANTS_IMAGE_PATH, image_file)))
+    if step < 10:
+      	# 因為np.array是`HWC`格式，必須指定`dataformats="HWC"`
+        # 可以使用image.shape取得圖片格式
+        writer.add_image("First 10 ants", ant_np_image, step, dataformats="HWC")
+        step = step + 1
+
+writer.close()
+```
+
+打開TensorBoard
+
+```shell
+tensorboard --logdir=logs
+```
+
+點擊網址進行查看，就可以看到TensorBoard紀錄了10張圖片
+
+<img src="/Users/luoyongneng/Desktop/Screenshot 2023-11-25 at 6.39.18 PM.png" alt="Screenshot 2023-11-25 at 6.39.18 PM" style="zoom:50%;" />
